--- a/site/public/dashboard/dash.html
+++ b/site/public/dashboard/dash.html
@@ -57,7 +57,7 @@
                         </div>
 
                         <div class="graficos">
-                            <span>HARD</span>
+                            <span>DIFÍCIL</span>
                             <canvas id="quizBarraHARD"></canvas>
                         </div>
 
@@ -67,20 +67,23 @@
 
         <div class="graficosBaixo">
 
-            <div class="mediaQuiz">
-                <span id="spanQuizFacil"></span>
-            </div>
-            <div class="mediaQuiz">
-                <span id="spanQuizMedio"></span>
-            </div>
-            <div class="mediaQuiz">
-                <span id="spanQuizHard"></span>
-            </div>
+                <div class="mediaQuiz">
+                    <div class="TituloKPI">Média acertos nivel Facil</div>
+                    <span id="spanQuizFacil"></span>
+                </div>
+                <div class="mediaQuiz">
+                    <div class="TituloKPI">Média acertos nivel Médio</div>
+                    <span id="spanQuizMedio"></span>
+                </div>
+                <div class="mediaQuiz">
+                    <div class="TituloKPI">Média acertos nivel Difícil</div>
+                    <span id="spanQuizHard"></span>
+                </div>
 
-            <div class="graficoPersonagens"> 
-                <span>Preferidos da galera</span>
-                <canvas id="quizBarraPersonagens"></canvas>
-            </div>
+                <div class="graficoPersonagens"> 
+                    <span>Preferidos da galera</span>
+                    <canvas id="quizBarraPersonagens"></canvas>
+                </div>
 
         </div>
 
