NOVO LOGIN E  CADASTRO

--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="../css/stylehome2.css">
     <link rel="stylesheet" href="../css/style.css">
     <script src="../site/js/header.js"></script>
@@ -16,13 +17,13 @@
         <div class="div_header">
             <a href="../site/index.html">Home</a>
         </div>
-        <div>
-            Usuario
+        <div id="usuarioSession">
+            
         </div>
         <div class="menu-container">
             <button class="menu-btn" onclick="AbrirOpcoes()">☰</button>
             <div class="menu-options" id="menu">
-                <a href="../site/login.html">Login</a>
+                <a href="../site/login2.html">Login</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
@@ -92,4 +93,4 @@
 </body>
 
 </html>
-
+<script src="js/sessao.js"></script>
