--- a/site/public/site/quiz/quiz.html
+++ b/site/public/site/quiz/quiz.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body onload="validarSessao()">
     <div class="divVoltar">
         <button onclick="Voltar()">VOLTAR</button>
     </div>
