--- a/site/public/site/quiz/quizMedio.html
+++ b/site/public/site/quiz/quizMedio.html
@@ -10,7 +10,8 @@
 
 </head>
 
-<body>
+<body onload="validarSessaoMedio()">
+    
     <div class="divVoltar">
         <button onclick="Voltar()">VOLTAR</button>
     </div>
