--- a/site/public/dashboard/dash.html
+++ b/site/public/dashboard/dash.html
@@ -18,13 +18,13 @@
         <div class="div_header">
             <a href="../site/index.html">Home</a>
         </div>
-        <div>
-            Usuario
+        <div id="usuarioSession">
+            
         </div>
         <div class="menu-container">
             <button class="menu-btn" onclick="AbrirOpcoes()">☰</button>
             <div class="menu-options" id="menu">
-                <a href="../site/login.html">Login</a>
+                <a href="../site/login2.html">Login</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
@@ -47,17 +47,17 @@
                 <div class="graficosQuiz">
 
                         <div class="graficos">
-                            <span>FACIL</span>
+                            <span>Maiores pontuades nível Fácil</span>
                             <canvas id="quizBarraFACIL"></canvas>
                         </div>
 
                         <div class="graficos">
-                            <span>MEDIO</span>
+                            <span>Maiores pontuades nível Médio</span>
                             <canvas id="quizBarraMEDIO"></canvas>
                         </div>
 
                         <div class="graficos">
-                            <span>DIFÍCIL</span>
+                            <span>Maiores pontuades nível Hard</span>
                             <canvas id="quizBarraHARD"></canvas>
                         </div>
 
