--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -14,13 +14,13 @@
         <div class="div_header">
             <a href="../site/index.html">Home</a>
         </div>
-        <div>
-            Usuario
+        <div id="usuarioSession">
+            
         </div>
         <div class="menu-container">
             <button class="menu-btn" onclick="AbrirOpcoes()">☰</button>
             <div class="menu-options" id="menu">
-                <a href="../site/login.html">Login</a>
+                <a href="../site/login2.html">Login</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
