--- a/site/public/site/sobremim.html
+++ b/site/public/site/sobremim.html
@@ -17,13 +17,13 @@
         <div class="div_header">
             <a href="../site/index.html">Home</a>
         </div>
-        <div>
-            Usuario
+        <div id="usuarioSession">
+            
         </div>
         <div class="menu-container">
             <button class="menu-btn" onclick="AbrirOpcoes()">☰</button>
             <div class="menu-options" id="menu">
-                <a href="../site/login.html">Login</a>
+                <a href="../site/login2.html">Login</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
@@ -76,13 +76,7 @@
             <div id="preferidoEsquerda">
 
                 <div class="TitulosSobre">Minha identificação</div>
-                <div id="textoEsquerda">Quas ab eius aliquid et eligendi molestiae. Qui dignissimos ullam non atque iste
-                    qui suscipit tenetur At quia dolores quo impedit laborum et aperiam animi. In accusantium tempora et
-                    sequi similique et nisi accusantium sit Quis minima qui commodi ullam et rerum porro. Ut quia quia
-                    aut recusandae earum et quis aspernatur? Enim id necessitatibus perferendis nemo, fugiat
-                    perspiciatis, adipisci Sit omnis dolorem eum quaerat voluptas aut sint consectetur sit Quis minima
-                    qui commodi ullam et rerum porro. Ut quia quia aut recusandae earum et quis aspernatur? Sit omnis
-                    dolorem eum quaerat voluptas aut sint consectetur.</div>
+                <div id="textoEsquerda">Naruto é um símbolo de superação e determinação para mim. Eu me identifico com ele pois ele nunca desistiu, mesmo enfrentando dificuldades imensas e crescendo sem sua famíli ele sempre encontrou força para seguir em frente conquistar seus sonhos e construir laços profundos com as pessoas ao seu redor. Em diversos momentos da minha infancia eu me sentia triste por não ter um pai presente como os de meus amigos. Porém assistindo Naruto eu via que isso não precisava ser algo ruim, eu encotrava forças para continuar. Naruto representa mais do que uma história, é um legado de família, algo especial que minha mãe compartilhou comigo passando todo esse amor pela obra e pelos valores que ela carrega.</div>
             </div>
 
 
@@ -117,27 +111,21 @@
 
             <div class="Episodios">
                 <div class="Episodio">
-                    <span class="nomeEP">Lorem ipsum dolor</span>
-                    <div class="fotoEP"></div>
-                    <span class="descEP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, necessitatibus
-                        nostrum eligendi eveniet a odit voluptas minima maxime eius non nihil itaque corrupti cupiditate
-                        illum assumenda sed voluptate quam doloribus cum! Vero maiores odit quod?</span>
+                    <span class="nomeEP">Eu Sempre Vou Te Amar</span>
+                    <div class="fotoEP339"></div>
+                    <span class="descEP">Ao decorrer do episódio 339 Itachi Uchiha junto com seu irmão Sasuke Uchiha consegue parar o Jutso de Obito, ao fim do episódio temos então a real despedida de irmão para irmão entre Itachi e Sasuke. Itachi enfim revela todo o seu passado para Sasuke.</span>
                 </div>
 
                 <div class="Episodio">
-                    <span class="nomeEP">Lorem ipsum dolor</span>
-                    <div class="fotoEP"></div>
-                    <span class="descEP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, necessitatibus
-                        nostrum eligendi eveniet a odit voluptas minima maxime eius non nihil itaque corrupti cupiditate
-                        illum assumenda sed voluptate quam doloribus cum! Vero maiores odit quod?</span>
+                    <span class="nomeEP">Quarto Hokage </span>
+                    <div class="fotoEP168"></div>
+                    <span class="descEP">Durante o episódio 168 uma batalha que está acontecendo, o começo do episódio se passa dentro da mente confusa de Naruto. Ao decorrer da trama Naruto recebe ajuda do Quarto Hogake e descobre que ele é o seu pai.</span>
                 </div>
 
                 <div class="Episodio">
-                    <span class="nomeEP">Lorem ipsum dolor</span>
-                    <div class="fotoEP"></div>
-                    <span class="descEP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, necessitatibus
-                        nostrum eligendi eveniet a odit voluptas minima maxime eius non nihil itaque corrupti cupiditate
-                        illum assumenda sed voluptate quam doloribus cum! Vero maiores odit quod?</span>
+                    <span class="nomeEP">Obrigado</span>
+                    <div class="fotoEP249"></div>
+                    <span class="descEP">No episódio 249 temos o final da trama onde Naruto  está domando o poder da Nove Caudas, durante esses episódios ele conhece sua mãe Kushina Uzumaki. Esse episódio fecha com chave de ouro o reencontro de Naruto e sua mãe. </span>
                 </div>
             </div>
         </div>
