--- a/site/public/site/time7.html
+++ b/site/public/site/time7.html
@@ -16,13 +16,13 @@
         <div class="div_header">
             <a href="../site/index.html">Home</a>
         </div>
-        <div>
-            Usuario
+        <div id="usuarioSession">
+            
         </div>
         <div class="menu-container">
             <button class="menu-btn" onclick="AbrirOpcoes()">☰</button>
             <div class="menu-options" id="menu">
-                <a href="../site/login.html">Login</a>
+                <a href="../site/login2.html">Login</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
                 <a href="../site/historia.html">Historia Anime</a>
                 <a href="../site/time7.html">Conheça o time 7</a>
@@ -42,12 +42,11 @@
     <!-- Parte do Naruto -->
     <div class="sessaoPersonagemNaruto">
         <div class="esquerdaPersonagem">
-            <div class="textoPersonagem">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus alias
-                id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui dignissimos
-                ullam non atque iste qui suscipit tenetur At quia dolores quo impedit laborum .</div>
+            <div class="textoPersonagem">Naruto Uzumaki é o protagonista do anime. Um jovem ninja da Vila da Folha conhecido por sua personalidade teimosa e determinada. Órfão desde o nascimento, Naruto cresceu sem o amor dos pais e enfrentou o desprezo da vila por ser o portador da Kyuubi, a Raposa de Nove Caudas selada dentro dele.</div>
             <div class="iconesPersonagem">
-                <div id="imagemNaruto"></div>
-                <span>Eu sempre me considerei uma verdadeira ninja... mas eram apenas palavras vazias, porque Sasuke e Naruto estavam sempre na minha frente! Mas agora é minha vez de assumir a liderança!</span>
+                <span>"Se você não gosta do seu destino, não aceite. Em vez disso, tenha a coragem de mudá-lo do jeito que você quer que seja."
+
+                </span>
             </div>
         </div>
         <div class="direitaPersonagem">
@@ -62,13 +61,9 @@
     <!-- COMEÇO SAKURA -->
     <div class="sessaoPersonagemSakura">
         <div class="esquerdaPersonagemInverso">
-            <div class="textoPersonagemInverso">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus
-                alias
-                id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui dignissimos
-                ullam non atque iste qui suscipit tenetur At quia dolores quo impedit laborum .</div>
+            <div class="textoPersonagemInverso">Sakura Haruno é uma ninja da Vila da Folha e integrante do Time 7, ao lado de Naruto e Sasuke, sob a liderança de Kakashi. No início da série, Sakura é conhecida por sua inteligência, domínio em teoria ninja e sua paixão por Sasuke, mas ela enfrenta críticas por sua falta de habilidades em combate direto.Com o tempo, Sakura amadurece e se torna uma ninja extremamente forte</div>
             <div class="iconesPersonagemInverso">
-                <div id="imagemSakura"></div>
-                <span>Eu sempre me considerei uma verdadeira ninja... mas eram apenas palavras vazias, porque Sasuke e Naruto estavam sempre na minha frente! Mas agora é minha vez de assumir a liderança!</span>
+                <span>"As coisas mais importantes não estão escritas num livro, é preciso aprendê-las vivenciando-as sozinho."</span>
             </div>
         </div>
         <div class="direitaPersonagemInverso">
@@ -84,12 +79,9 @@
     <!-- Começo SASUKE -->
     <div class="sessaoPersonagemSasuke">
         <div class="esquerdaPersonagem">
-            <div class="textoPersonagem">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui temporibus alias
-                id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui dignissimos
-                ullam non atque iste qui suscipit tenetur At quia dolores quo impedit laborum .</div>
+            <div class="textoPersonagem">Sasuke Uchiha é um dos personagens centrais da série Naruto e rival do Naruto. Ele pertence ao renomado clã Uchiha, conhecido pelo poder do Sharingan. Após testemunhar o massacre de seu clã pelas mãos de seu irmão mais velho, Itachi, Sasuke cresce consumido pelo desejo de vingança, tornando isso seu principal objetivo na vida.</div>
             <div class="iconesPersonagem">
-                <div id="imagemSasuke"></div>
-                <span>	Eu odeio muitas coisas e não gosto de nada em particular. Eu não tenho um sonho, mas sim uma ambição... Quero restabelecer o meu clã e matar um certo alguém!</span>
+                <span>"Desde que você não desista, vai sempre existir salvação."</span>
             </div>
         </div>
         <div class="direitaPersonagem">
@@ -104,14 +96,9 @@
     <!-- COMEÇO KAKSHI -->
     <div class="sessaoPersonagemKakashi">
         <div class="esquerdaPersonagemInverso">
-            <div class="textoPersonagemInverso">Lorem ipsum dolor sit amet. Est facilis perspiciatis qui
-                temporibus alias
-                id iusto exercitationem rem consectetur quas ab eius aliquid et eligendi molestiae. Qui
-                dignissimos
-                ullam non atque iste qui suscipit tenetur At quia dolores quo impedit laborum</div>
+            <div class="textoPersonagemInverso">Kakashi Hatake é um dos ninjas mais habilidosos e respeitados da Vila da Folha. Conhecido como o Ninja Copiador, ele possui o Sharingan em um de seus olhos, que lhe permite copiar jutsus de outros ninjas. Kakashi é o líder do Time 7, composto por Naruto, Sasuke e Sakura, e atua como sensei, guiando-os tanto em batalhas quanto em lições de vida.</div>
             <div class="iconesPersonagemInverso">
-                <div id="imagemKakashi"></div>
-                <span>No mundo ninja, aqueles que quebram as regras são lixos, é verdade, mas aqueles que abandonam seus companheiros são piores do que lixo.</span>
+                <span>"Esqueça a vingança. O destino dos que procuram a vingança é sombrio. É trágico e você vai acabar sofrendo e se machucando ainda mais. Mesmo que você consiga sua vingança, a única coisa que vai persistir é o vazio."</span>
             </div>
         </div>
         <div class="direitaPersonagemInverso">
