--- a/site/public/dashboard/dash.html
+++ b/site/public/dashboard/dash.html
@@ -47,17 +47,17 @@
                 <div class="graficosQuiz">
 
                         <div class="graficos">
-                            <span>Maiores pontuades nível Fácil</span>
+                            <span>TOP7 pontuadores nível Fácil</span>
                             <canvas id="quizBarraFACIL"></canvas>
                         </div>
 
                         <div class="graficos">
-                            <span>Maiores pontuades nível Médio</span>
+                            <span>TOP5 pontuadores nível Médio</span>
                             <canvas id="quizBarraMEDIO"></canvas>
                         </div>
 
                         <div class="graficos">
-                            <span>Maiores pontuades nível Hard</span>
+                            <span>TOP5 pontuadores nível Hard</span>
                             <canvas id="quizBarraHARD"></canvas>
                         </div>
 
@@ -97,4 +97,5 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.1.0"></script>
     <script src="./dash.js"></script>
+    <script src="../site/js/sessao.js"></script>
     
