--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
     <link rel="stylesheet" href="../css/stylehome2.css">
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../site/js/header.js"></script>
+    
 </head>
 <body>
     <header>
@@ -40,22 +39,54 @@
     <div class="TelaGeralHistoria">
 
                     <div class="telaClassico">
+                        <div class="telaClassicoCima">
                         <div class="telaClassicoEsquerda">
                             <div class="logoClassico"></div>
                             <div class="fotoNarutoClassico"></div>
                         </div>
-                        <div class="telaClassicoDireita"></div>
+                        <div class="telaClassicoDireita">
+                            <span>A primeira fase do anime Naruto conta a infância dos personagens ingressando na academia ninja e a formação do Time 7, a história aborda as dificuldades de Naruto em ser aceito pela sociedade de Konoha e suas travessuras para ser reconhecido, junto de seus novos amigos ele aprende o poder da amizade e seu jeito ninja. Os três possuem personalidades e histórias de vida diferentes, e mesmo diante de tanta diversidade Naruto Uzumaki, Sakura Haruno e Sasuke Uchiha junto ao seu sensei Kakashi Hatake formam uma equipe com habilidades únicas.  <br>
+                                A história central de Naruto na primeira fase, conta com a apresentação dos personagens da Academia ninja, a formação dos times e a prova chunin, ponto central da história onde uns dos  vilões mais procurados do mundo ninja: “Orochimaru “ assassina o Terceiro Hokage  e faz uma proposta para Sasuke Uchiha que cego pelo poder da vingança aceita e se torna um ninja renegado traindo a própria vila. <br>
+                                Naruto e Sakura, não desistem do amigo. A dor de ver o amigo se tornando uma pessoa sombria e cega por vingança, faz com que ambos treinem para se tornarem mais fortes e trazer Sasuke Uchiha de volta a Konohagure. 
+
+
+
+                                </span>
+                        </div>
                     </div>
+                    <div class="telaClassicoBaixo">
+                        <div class="imagemClassico1"></div>
+                        <div class="imagemClassico2"></div>
+                        <div class="imagemClassico3"></div>
+                        <div class="imagemClassico4"></div>
+                    </div>
+                    </div>
+                    <br>
 
 
                     <div class="telaShippuden">
+                        <div class="telaShippudenCima">
                         <div class="telaShippudenEsquerda">
                             <div class="logoShippuden"></div>
                             <div class="fotoNarutoShippuden"></div>
                         </div>
                         <div class="telaShippudenDireita">
+                            <span>Nesta fase os personagens já estão na adolescência e com suas habilidades em pleno desenvolvimento. Naruto descobriu parte de sua história e sai da Vila para treinar com Jiraya (um dos grandes ninjas legendários). <br>
+                                Sakura completa seu treinamento com a Hokage atual: Tsunade que também é ninja legendária, tornando -se uma ninja médica e umas das mais fortes shinobi de konoha. Sasuke atinge seu objetivo de vingar seu clã e descobre que viveu uma mentira que o fez assassinar seu próprio irmão. Durante o desenvolvimento dos personagens desencadeia a quarta grande guerra Ninja, fazendo Naruto ser reconhecido por todos, não apenas sua vila, mas toda nação shinobi. 
+                                <br>
+                                Um dos principais aspectos abordado é a resiliência de Naruto de nunca desistir e reconhecer suas limitações, mas também seu poder de liderança. Com o decorrer da história ele aprende que não se faz nada sozinho e através de seu carisma, pensamento positivo e a confiança que deposita em seus amigos ele os inspira e se tornar cada vez mais forte, se tornando o grande líder responsável por terminar a quarta grande guerra ninja. 
+
+                            </span>
                         </div>
                     </div>
+                    <div class="telaShippudenBaixo">
+                        <div class="imagemShippuden1"></div>
+                        <div class="imagemShippuden2"></div>
+                        <div class="imagemShippuden3"></div>
+                        <div class="imagemShippuden4"></div>
+                    </div>
+                    </div>
+                    <br><br>
 
     </div>
 
@@ -100,3 +131,4 @@
     return window.location = "./historia.html"; 
 }
 </script>
+<script src="../site/js/header.js"></script>
