--- a/site/public/site/onu.html
+++ b/site/public/site/onu.html
@@ -48,13 +48,14 @@
                 <div class="topico">
                     <div class="OnuTitulo">Saúde e Bem-Estar</div>
                     <div class="OnuImagem1"></div>
-                    <div class="OnuTexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias itaque possimus sapiente id animi voluptates laboriosam, laudantium atque eum dolore accusantium ipsa iste ipsam beatae vitae quia perferendis natus deleniti, nam nulla voluptatum pariatur. Beatae ab ipsam unde! Perspiciatis, maxime!
+                    <div class="OnuTexto">Personagens como Tsunade e Sakura são exemplos de especialistas que utilizam Ninjutsu Médico, uma combinação de chakra e conhecimento médico avançado para curar ferimentos e doenças. <br>
+                        Durante o anime Sakura Haruno criou um hospital Psiquiátrico para atender as crianças que foram traumatizadas pela guerra.
                     </div>
                 </div>
                 <div class="topico">
                     <div class="OnuTitulo">Redução das Desigualdades</div>
                     <div class="OnuImagem2"></div>
-                    <div class="OnuTexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias itaque possimus sapiente id animi voluptates laboriosam, laudantium atque eum dolore accusantium ipsa iste ipsam beatae vitae quia perferendis natus deleniti, nam nulla voluptatum pariatur. Beatae ab ipsam unde! Perspiciatis, maxime!
+                    <div class="OnuTexto">Vilas como Konoha são mostradas como mais desenvolvidas economicamente e militarmente, enquanto outras, como a Vila da Chuva, sofrem com pobreza extrema e constantes guerras. <br>Rock Lee nasce sem a habilidade de usar ninjutsu ou genjutsu, mas supera essa limitação por meio de trabalho duro e dedicação ao taijutsu.
                     </div>
                 </div>
             </div>
@@ -63,13 +64,14 @@
                 <div class="topico">
                     <div class="OnuTitulo">Paz, Justiça e instituições eficazes</div>
                     <div class="OnuImagem3"></div>
-                    <div class="OnuTexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias itaque possimus sapiente id animi voluptates laboriosam, laudantium atque eum dolore accusantium ipsa iste ipsam beatae vitae quia perferendis natus deleniti, nam nulla voluptatum pariatur. Beatae ab ipsam unde! Perspiciatis, maxime!
+                    <div class="OnuTexto">
+                        Naruto herda a visão de Jiraiya, que acreditava que uma nova geração poderia trazer uma paz duradoura. Personagens como Nagato (Pain) e Sasuke ilustram como o desejo por vingança destrói indivíduos e comunidades. <br> Durante a Quarta Guerra Ninja, as vilas deixam suas diferenças de lado e trabalham juntas.
                     </div>
                 </div>
                 <div class="topico">
                     <div class="OnuTitulo">Parcerias e meios de implementação</div>
                     <div class="OnuImagem4"></div>
-                    <div class="OnuTexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias itaque possimus sapiente id animi voluptates laboriosam, laudantium atque eum dolore accusantium ipsa iste ipsam beatae vitae quia perferendis natus deleniti, nam nulla voluptatum pariatur. Beatae ab ipsam unde! Perspiciatis, maxime!
+                    <div class="OnuTexto">As cinco grandes nações (Vilas da Folha, Areia, Nuvem, Névoa e Pedra), historicamente rivais, unem forças contra um inimigo comum, mostrando como a cooperação pode superar diferenças históricas <br> A aliança não apenas promoveu a sobrevivência no mundo ninja como também abriu caminho para uma paz duradoura
                     </div>
                 </div>
             </div>
@@ -106,3 +108,5 @@
     </footer>
 </body>
 </html>
+
+<script src="js/sessao.js"></script>
