--- a/site/public/site/sobremim.html
+++ b/site/public/site/sobremim.html
@@ -47,24 +47,17 @@
         <div id="sobreInformações">
 
             <div class="sobre1">
-                <div id="sobreTexto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quasi quisquam ad
-                    ullam illum! Enim id necessitatibus perferendis nemo, fugiat perspiciatis, adipisci possimus
-                    praesentium ex in laboriosam sed doloribus earum. Omnis ducimus placeat consequatur dolorem ea
-                    perspiciatis illum deserunt voluptatum amet. Enim nemo porro illum quibusdam error laudantium ipsa
-                    ex consequuntur quo quae ullam reprehenderit non officia nihil excepturi fuga consectetur ad nisi,
-                    iusto quisquam accusantium laboriosam in. Delectus, incidunt.</div>
+                <div id="sobreTexto">Conheci o anime através de minha querida mamãe, por volta de 2007 quando o
+                    Naruto Shippuden estava no começo de seu lançamento minha mãe teve o contato com o anime através de um amigo de faculdade. Empolgada com o anime resolveu me apresentar e colocar para assistirmos os episódios juntos. Assistiamos nos fins  <br>
+                    Nessa época eu tinha por volta dos 3/4 anos, esse contato com o anime me ajudou muito no processo de alfabetização. Minha mãe pausava o episódio e me auxiliava a ler a legenda.
+                    </div>
                 <div id="sobreImagem"></div>
             </div>
 
 
             <div class="sobre2">
-                <div id="sobreImagem"></div>
-                <div id="sobreTexto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia quasi quisquam ad
-                    ullam illum! Enim id necessitatibus perferendis nemo, fugiat perspiciatis, adipisci possimus
-                    praesentium ex in laboriosam sed doloribus earum. Omnis ducimus placeat consequatur dolorem ea
-                    perspiciatis illum deserunt voluptatum amet. Enim nemo porro illum quibusdam error laudantium ipsa
-                    ex consequuntur quo quae ullam reprehenderit non officia nihil excepturi fuga consectetur ad nisi,
-                    iusto quisquam accusantium laboriosam in. Delectus, incidunt.</div>
+                <div id="sobreImagem2"></div>
+                <div id="sobreTexto">Esse amor que minha mamãe conquistou pelo anime foi passado para mim. Naruto já me ajudou em diversos momentos na minha infancia, e até mesmo durante a faculdade. No anime não é apenas sobre um mundo Ninja, mas um anime que demonstra o que é ser uma pessoa resiliente, e acima de tudo. <br>A principal lição que eu levo do anime é que você tem que acreditar em você mesmo. Amigos, familia e até mesmo o mundo pode acreditar em você, porém se você mesmo não acredita em si mesmo nada será possivel.</div>
             </div>
 
 
@@ -158,3 +151,5 @@
 </body>
 
 </html>
+
+<script src="js/sessao.js"></script>
