--- a/site/public/site/index.html
+++ b/site/public/site/index.html
@@ -64,11 +64,11 @@
 
         <footer class="footer">
             <div id="footerPaginas">
-                <a href="home.html">Home</a>
+                <a href="../site/index.html">Home</a>
                 <a href="../site/sobremim.html">Sobre Mim</a>
-                <a href="../site/login.html">Cadastro/Login</a>
+                <a href="../site/login2.html">Cadastro/Login</a>
                 <a href="../site/historia.html">História</a>
-                <a href="../site/personagens.html">Personagens</a>
+                <a href="../site/time7.html">Time 7</a>
             </div>
             <div id="footerMeio">
                 <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
