--- a/site/public/site/historia.html
+++ b/site/public/site/historia.html
@@ -94,11 +94,11 @@
 
     <footer class="footer">
         <div id="footerPaginas">
-            <a href="home.html">Home</a>
-            <a href="sobremim.html">Sobre Mim</a>
-            <a href="">Cadastro/Login</a>
-            <a href="historia.html">História</a>
-            <a href="personagens.html">Personagens</a>
+            <a href="../site/index.html">Home</a>
+            <a href="../site/sobremim.html">Sobre Mim</a>
+            <a href="../site/login2.html">Cadastro/Login</a>
+            <a href="../site/historia.html">História</a>
+            <a href="../site/time7.html">Time 7</a>
         </div>
         <div id="footerMeio">
             <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
@@ -110,7 +110,7 @@
             <span id="Desenvolvido">Desenvolvido por Macari Marcelino</span>
         </div>
         <div id="footerRedes">
-            <a href="">E-mail</a>
+            <!-- <a href="">E-mail</a> -->
             <a href="">Linked-in</a>
             <a href="https://github.com/macari-11">GitHub</a>
             <a href="https://www.instagram.com/macarimarcelino/">Instagram</a>
