--- a/site/public/site/sobremim.html
+++ b/site/public/site/sobremim.html
@@ -126,11 +126,11 @@
 
         <footer class="footer">
             <div id="footerPaginas">
-                <a href="home.html">Home</a>
-                <a href="sobremim.html">Sobre Mim</a>
-                <a href="login.html">Cadastro/Login</a>
-                <a href="historia.html">História</a>
-                <a href="personagens.html">Personagens</a>
+                <a href="../site/index.html">Home</a>
+                <a href="../site/sobremim.html">Sobre Mim</a>
+                <a href="../site/login2.html">Cadastro/Login</a>
+                <a href="../site/historia.html">História</a>
+                <a href="../site/time7.html">Time 7</a>
             </div>
             <div id="footerMeio">
                 <span id="JornadaNinja">Continue sua jornada ninja por aqui</span>
